# yata

./: .gitignore  .yat.db  Cargo.toml  README.md  focus_1  focus_10  ideas.md  todo
src/: config.rs  lib.rs  main.rs
src/cli/: mod.rs  parser.rs  serializer.rs  task_helper.rs
src/command_execution/: mod.rs
src/command_execution/commands/: create_task.rs  edit_tasks.rs  list_tasks.rs  mod.rs  status.rs
src/command_execution/models/: task.rs
src/command_execution/persistence/: crud.rs
src/command_execution/task_diff/: diff.rs  mod.rs  serializer.rs  tokenizer.rs
src/db/: crud.rs  mod.rs  tasks.rs
src/input_parser/: input_parser.rs  mod.rs  task_helper.rs
src/output_serializer/: mod.rs  output_serializer.rs
src/parser/: diff.rs  mod.rs  serializer.rs  tokenizer.rs
src/task_diff/: diff.rs
src/test/: helper.rs
