[package]
name = "yat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yat"
path = "src/main.rs"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edit = "0.1.5"
rusqlite = { version = "0.31.0", features = ["bundled"] }
itertools = "0.12.1"
regex = "1.10.4"
